# moss

./: .gitattributes  .gitignore  CLAUDE.md  drizzle.config.ts  package-lock.json  package.json  svelte.config.js  vite.config.js  vitest.config.ts
.github/workflows/: cache-warm.yml  release.yml  update-manifest.yml
docs/superpowers/plans/: 2026-07-14-notebook-rename-delete.md
docs/superpowers/specs/: 2026-07-14-notebook-rename-delete-and-editor-bug.md
scripts/: fix-migrations.mjs
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0000_curly_patriot.sql  0001_solid_maelstrom.sql  0002_add_fts5.sql  0003_fair_paladin.sql  0004_add_embeddings.sql  0005_add_settings.sql  0006_add_language.sql  0007_add_notebooks.sql
src-tauri/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0003_snapshot.json  _journal.json
src-tauri/src/: lib.rs  migration_repair.rs
src-tauri/src/commands/: mod.rs  notes.rs  search.rs
src/core/types/: index.ts
src/lib/db/: index.ts  schema.ts
src/lib/dev/: DevToolbar.svelte  devUtils.ts  seedJapaneseNotes.ts
src/lib/editor/: codeMirrorStaticCss.test.ts  debug.test.ts  editorCursor.test.ts  floatingToolbar.ts  fontTokens.test.ts  markdownDecorations.test.ts  markdownDecorations.ts  minimal.test.ts  mossEditorTheme.ts  mossTheme.test.ts  mossTheme.ts  ultra_minimal.test.ts
src/lib/stores/: notebooks.test.ts  notebooks.ts  notes.svelte.ts  search.test.ts  (+4 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+13 files in other folders)
